# init-nodejs-project

./: Cargo.toml  README.md  build.rs  justfile
src/: main.rs
src/templates/: LICENSE.hbs  jsconfig.json.hbs  package.json  package.json.hbs  vite.config.js.hbs
