[package]
name = "init-nodejs-project"
version = "0.4.0"
edition = "2021"
rust-version = "1.59"

[profile.release]
lto = true
panic = 'abort'
opt-level = 2
strip = true

[dependencies]
time = { version = "0.3", features = ["std"] }
clap = { version = "3", features = ["derive"] }
handlebars = "4"
serde_json = "1"
