[package]
name = "init-nodejs-project"
version = "0.6.2"
edition = "2021"
rust-version = "1.59"

[profile.release]
lto = true
panic = 'abort'
opt-level = 3
strip = true

[dependencies]
time = { version = "0.3", features = ["std", "local-offset"] }
handlebars = "4"
serde_json = "1"
pico-args = "0.5.0"
